<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    style="@style/AppTheme.NoMargin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AppTheme.NoMargin"
            >

            <TextView
                android:id="@+id/tittleRegistro"
                style="@style/AppTheme.tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registro"
                />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelUsuario"
                style="@style/AppTheme.Label"
                />

            <EditText
                android:id="@+id/inputName"
                style="@style/AppTheme.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/emailLabel"
                style="@style/AppTheme.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelEmail" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/AppTheme.Input.Email"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textEmailSubject"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/passLabel"
                style="@style/AppTheme.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPass" />

            <EditText
                android:id="@+id/inputPassR"
                style="@style/AppTheme.Input.Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_pass"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/ageLebel"
                style="@style/AppTheme.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelAge" />

            <EditText
                android:id="@+id/inputAge"
                style="@style/AppTheme.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="Name" />

            <Button
                android:id="@+id/submitButton"
                style="@style/AppTheme.Input.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro" />

            <Button
                android:id="@+id/loginLinkButton"
                style="@style/AppTheme.Input.Button.Down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginLink" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>